[package]
name = "sseichi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
nom = "7.1.3"
hmac = "0.12.1"
sha1 = "0.10.5"
sha2 = "0.10.7"
md5 = "0.7.0"
flate2 = "1.0.26"
x25519-dalek = "2.0.1"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
aes-gcm = "0.10.2"
typenum = "1.16.0"
chacha20poly1305 = "0.10.1"
ctr = "0.9.2"
aes = { version = "0.8", feature = ["ctr"] }
rsa = "0.9.2"
cipher = "0.4"
chacha20 = { version = "0.9", default-features = false }
poly1305 = { version = "0.8", default-features = false }
subtle = { version = "2", default-features = false }
ring = "0.17"
ssh-rs = "0.5"
ssh-key = { version = "0.6", features = ["rsa", "ed25519"] }
strum = "0.26"
strum_macros = "0.26"
anyhow = "1.0.79"
thiserror = "1.0.57"
termion = "3.0.0"
tracing = "0.1"
tracing-subscriber = "0.3.17"
tracing-appender = "0.2.3"
